adding load test project